Add default table columns
Add ability to set default columns and for developers to extend UserTablePreferences to set their own default columns.